@@ -8,6 +8,10 @@ Cogent 1.3 - 1.4
 New Features
 ------------
 
+* phylo.distance.EstimateDistances class has a new argument, modify_lf. This
+  allows the use the modify the likelihood function, possibly constraining
+  parameters, freeing them, setting bounds, pre-optimising etc..
+
 Changes
 -------
 
